examples/good/09-GlobalVars.tms
int x = 1;
boolean t = true;
string z = "print me!";

void main() {

  if (t) {
    x = x + 1;
    printString(z);
    printInt(x);

    printBool(true);
  }

  return;
}