examples/bad/02-ComparisonBadType.tms
void main () {
  
  string x = "xxx";
  boolean b = true;

  if (b != x) {
    printString("!!!");
  }

  return;
}